@@ -1,3 +1,9 @@
+Sun Jan 17 15:30:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/socket/option.c (sockopt_bool): relax boolean size to be one
+	  too not only sizeof(int).  Winsock getsockopt() returns a single
+	  byte as a boolean socket option.  [ruby-core:72730] [Bug #11958]
+
 Sun Jan 17 14:43:01 2016  Kuniaki IGARASHI  <igaiga@gmail.com>
 
 	* test/ruby/test_env.rb: [Fix GH-1201]
